[cal] BM-17420 fix: calendar color change widget is too narrow

--- a/ui/closures/net.bluemind.calendar.application.closure/src/main/css/calendar.css
+++ b/ui/closures/net.bluemind.calendar.application.closure/src/main/css/calendar.css
@@ -232,6 +232,7 @@ td.goog-date-picker-highlighted {
     border: 1px solid #ccc;
     position: absolute;
     right: 1px;
+    padding-left: 2px;
 }
 
 
